--- a/index.html
+++ b/index.html
@@ -606,23 +606,34 @@
      <div id="chi" class="chi-buttons">
         <h2 class="bio-h2">Il gioco dei Chi?</h2>
         <p>
-        Immaginiamo che Dio giochi a dadi con l’universo e che i numeri pari dei due dadi segnino l’uguaglianza e il dispari  la loro diversità come nei cromosomi x e y. <br>
-
-        (Jumanji) si svolge in campi diversi collocati in universi diversi e a tiri diversi corrispondano percorsi di trasformazione. in questi l’universo a fuoco si trasforma in una nuova entità emergente. <br>
-
-        "Il chi" rappresenta il soggetto e l’oggetto del discorso che costruisce il gioco. <br>
-        scelgo tre universi concentrici in cui i chi sono sia contenitori che contenuti, intercambiabili tra loro per i tiri di dadi che dio fa per prendere in giro Einstein. <br>
-
-        Il lancio dei dadi contiene la materia energia per la dinamica della trasformazione. <br>
-
-        Scelgo tre livelli di questa serie che potrebbero essere "il chi" della foresta, 
-        "Il chi" della tribù, "Il chi" del mistero, in quanto i piu vicini all'universo di cui la nostra disciplina si occupa. <br>
-
-        Il fenomeno emergente nelle tre condizioni potrebbe essere "la Vita" per il chi ella foresta "il Corpo" per il chi della tribù. <br>
-        "il Sogno" per il chi del mistero. <br>
-
-        "Il chi" del mistero implica non il perseguimento di una meta ma il viaggio di una sonda spaziale verso l’infinito seriale.
-      </p>
+          Immaginiamo che Dio giochi a dadi con l’universo e che i numeri pari dei due dadi segnino
+          l’uguaglianza e il dispari la loro diversità come nei cromosomi x e y. <br>
+          Il nostro Jumanji si svolge in campi diversi collocati in universi diversi e, a tiri diversi,
+          corrispondono percorsi di trasformazione diversi. In questi l’universo a fuoco si trasforma
+          in una nuova entità emergente. <br>
+          Il “Chi&quot; rappresenta sia il soggetto che l’oggetto del discorso che costruisce il gioco. <br>
+          Scelgo tre universi concentrici in cui i “Chi” sono sia contenitori che contenuti
+          intercambiabili tra loro per i tiri di dadi che Dio fa per prendere in giro Einstein. <br>
+          Il lancio dei dadi contiene la materia-energia per la dinamica della trasformazione.
+          Scelgo tre livelli di questa serie che potrebbero essere il “Chi della foresta”, il “Chi della
+          tribù”, il “Chi del mistero”, in quanto i più vicini all&#39;universo di cui la nostra disciplina si
+          occupa. <br>
+          Il fenomeno emergente nelle tre condizioni potrebbe essere &quot;la Vita&quot; per il “Chi della
+          foresta”, &quot;il Corpo&quot; per il “Chi della tribù” e &quot;il Sogno&quot; per il “Chi del mistero”.
+          Il “Chi del mistero” implica non il perseguimento di una meta ma il viaggio di una sonda
+          spaziale verso l’infinito seriale. <br>
+          Ogni figura del gioco presa come atto aristotelico contiene in potenza qualunque altra
+          figura sia inserita nel gioco attraverso i legami delle libere associazioni e dell’attenzione
+          fluttuante. Il rapporto energetico è quello dell’accoppiamento strutturale e della scissione e
+          frantumazione. <br>
+          L’accoppiamento strutturale avviene per inglobamento (un’immagine che – blob –
+          scompare dentro un’altra). Il divorare comporta una crescita del collettivo divorante e la
+          distruzione di quello divorato. <br>
+          La scissione e frantumazione avvengono per proiezione e portano da una parte sputo,
+          defecazione, vomito, sangue, dall’altra alla creazione sia fisica (nascite) che simbolica (per
+          esempio arte).
+        </p>
+      
         <button onclick="location.href='chi.html'">Chi? (Foresta)</button>
         <button onclick="location.href='chi.html'">Chi? (Tribù)</button>
         <button onclick="location.href='chi.html'">Chi? (Mistero)</button>
