--- a/tempofuturo.html
+++ b/tempofuturo.html
@@ -66,9 +66,52 @@
   <main class="locandine-section">
     <h2>Prossimi appuntamenti (locandine e materiali)</h2>
 
+    <section>
+      <h3>T.I.R.A.M.I.S.U.</h3>
+
+      <h4>Gruppo di lettura</h4>
+      <ul>
+        <li>15/12/26</li>
+        <li>12/01/26</li>
+        <li>09/02/25</li>
+        <li>09/03/26</li>
+        <li>13/04/26</li>
+        <li>11/05/26</li>
+        <li>08/06/26</li>
+      </ul>
+
+      <h4>Supervisione di gruppo istituzionale</h4>
+      <ul>
+        <li>21/10/25</li>
+        <li>18/11/25</li>
+        <li>16/12/25</li>
+        <li>20/01/26</li>
+        <li>17/02/26</li>
+        <li>17/03/26</li>
+        <li>21/04/26</li>
+        <li>19/05/26</li>
+        <li>16/06/26</li>
+        <li>21/07/26</li>
+      </ul>
+    </section>
+
+    <!-- IIPG -->
+    <section>
+      <h3>Lezioni IIPG</h3>
+      <ul>
+        <li>Lezione 1 — 02/02/26</li>
+        <li>Lezione 2 — 02/03/26</li>
+        <li>Lezione 3 — 04/05/26</li>
+        <li>Lezione 4 — 15/06/26</li>
+        <li>Lezione 5 — 07/09/26</li>
+      </ul>
+    </section>
+
     <div class="locandine-grid">
       
     </div>
+
+
   </main>
 
   <footer id="footer-placeholder"></footer>
