--- a/grandigruppi.html
+++ b/grandigruppi.html
@@ -90,9 +90,9 @@
         target="_blank"
         class="locandina-card"
       >
-        <h3>21 OTTOBRE 2023</h3>
+        <h3>“CAPRI”: UNO SPAZIO-TEMPO PROTOMENTALE</h3>
         <p>
-         Giornate Caprese
+          21 ottobre 2023, Capri 
         </p>
       </a>
 
@@ -111,10 +111,9 @@
           loading="lazy"
         />
         -->
-        <h3>17 ,18 DICEMBRE 2022</h3>
+        <h3>Sulla rotta di Ulisse: tra psicoanalisi e letteratura</h3>
         <p>
-          Teatro Mulino Pacifico - SOLOT
-          via Appio Claudio, 17 Benevento
+          17-18 dicembre 2022, Teatro Mulino Pacifico - SOLOT, Benevento
         </p>
       </a>
 
@@ -123,10 +122,9 @@
         target="_blank"
         class="locandina-card"
       >
-        <h3>14, 15, 16 DICEMBRE 2018</h3>
+        <h3>Esplorare i sogni in cui il gruppo trasforma la realtà</h3>
         <p>
-         I.S.I.S. “A. Casanova” Piazzetta Casanova, 4
-(Via San Sebastiano) Napoli
+         14-16 dicembre 2018, I.S.I.S. “A. Casanova” Piazzetta Casanova, 4 (Via San Sebastiano) Napoli
         </p>
       </a>
 
@@ -135,10 +133,8 @@
         target="_blank"
         class="locandina-card"
       >
-        <h3>4 ,5 MAGGIO 2018 </h3>
-        <p>La Colombaia
-Fondazione Villa Visconti
-Forio d’Ischia (NA)</p>
+        <h3>I luoghi inesplorati della Gruppoanalisi Transculturale tra grandi gruppi multiculturali, catastrofi  e nuove soggettività.</h3>
+        <p>4-5 maggio 2018, La Colombaia Fondazione Villa Visconti Forio d’Ischia (NA).</p>
       </a>
 
       <a
@@ -146,12 +142,48 @@ Forio d’Ischia (NA)</p>
         target="_blank"
         class="locandina-card"
       >
-        <h3>10, 11, 12 OTTOBRE 2014</h3>
-        <p>Palazzo Zapata Piazza Trieste e Trento, 
-          48 Napoli 
-        
+        <h3>La città psicotica tra inconscio culturale e nuove politiche di civilizzazione.</h3>
+        <p>
+          10-12 ottobre 2014, Palazzo Zapata, Piazza Trieste e Trento, 48, Napoli
         </p>
       </a>
+
+      <!-- nuove-->
+
+      <a
+        href="locandine/"
+        target="_blank"
+        class="locandina-card"
+      >
+        <h3>Juegos Bionianos</h3>
+        <p>
+          7-10 aprile 2011, Bariloche, Argentina.
+        </p>
+      </a>
+
+      <a
+        href="locandine/"
+        target="_blank"
+        class="locandina-card"
+      >
+        <h3>Oltre la soglia. Sguardi a confronto sui modi della relazione.</h3>
+        <p>
+          10-11 ottobre 2008, Castello Aragonese, Ischia.
+        </p>
+      </a>
+
+      <a
+        href="locandine/"
+        target="_blank"
+        class="locandina-card"
+      >
+        <h3>Scissione ed integrazione nella psicosi e nella sua cura.</h3>
+        <p>
+          15-17 giugno 2000, Clinica Villa Camaldoli, Napoli.
+        </p>
+      </a>
+
+
 
     </div>
   </main>
