--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
     </div>
 
-     <div id="chi" class="chi-buttons">
+    <div id="chi" class="chi-buttons">
         <h2 class="bio-h2">Il gioco dei Chi?</h2>
         <p>
           Immaginiamo che Dio giochi a dadi con l’universo e che i numeri pari dei due dadi segnino
@@ -633,11 +633,257 @@
           defecazione, vomito, sangue, dall’altra alla creazione sia fisica (nascite) che simbolica (per
           esempio arte).
         </p>
-      
-        <button onclick="location.href='chi.html'">Chi? (Foresta)</button>
-        <button onclick="location.href='chi.html'">Chi? (Tribù)</button>
-        <button onclick="location.href='chi.html'">Chi? (Mistero)</button>
+    </div>
+    <b>Atto</b>
+
+    <!-- FRECCE ORIZZONTALI FULL WIDTH (come prima) -->
+    <div class="chi-arrows-top">
+      <div class="h right"></div>
+      <div class="h left"></div>
+    </div>
+
+    <b>Potenza </b>
+
+    <!-- BLOCCO CARD + FRECCE VERTICALI -->
+    <div class="chi-wrap">
+      <div class="chi-arrows">
+        <div class="v up"></div>
+        <div class="v down"></div>
       </div>
+
+      <div class="chi-layout">
+        <div class="chi-cards">
+
+          <!-- ===================== CHI FORESTA ===================== -->
+          <div class="chi-card chi-foresta">
+            <b>Chi? della Foresta</b>
+            <p>proprietà emergente: <b>LA VITA</b></p>
+
+            <img src="Immagini/foresta/C42B7B09-2500-4111-A7D8-E842F49AE9AA.png" alt="foresta">
+            <p>Per fare una foresta ci vuole un albero</p>
+
+            <img src="Immagini/foresta/822DADC9-6601-47FE-A84E-8F09607B722E.png" alt="albero">
+            <p>Per fare un albero ci vuole un tronco</p>
+
+            <img src="Immagini/foresta/9E45826E-7B2D-4105-93C0-4CEA71C6936A.png" alt="tronco">
+            <p>Per fare un tronco ci vuole un ramo</p>
+
+            <img src="Immagini/foresta/B7A2C670-EFE1-48F2-9A66-DCAD001E5197.png" alt="ramo">
+            <p>Per fare un ramo ci vogliono le foglie e i fiori.</p>
+
+            <!-- SDOPPIO (TAB) -->
+            <div class="chi-tabs" data-chi-tabs>
+              <div class="chi-tabbar" role="tablist" aria-label="Seleziona comunicazione">
+                <button
+                  class="chi-tab is-active"
+                  type="button"
+                  role="tab"
+                  aria-selected="true"
+                  aria-controls="chi-panel-sotterranea"
+                  id="chi-tab-sotterranea"
+                  data-chi-tab="sotterranea"
+                >
+                  comunicazione sotterranea ♀
+                </button>
+
+                <button
+                  class="chi-tab"
+                  type="button"
+                  role="tab"
+                  aria-selected="false"
+                  aria-controls="chi-panel-aerea"
+                  id="chi-tab-aerea"
+                  data-chi-tab="aerea"
+                >
+                  comunicazione aerea ♂
+                </button>
+              </div>
+
+              <div
+                class="chi-panel is-active"
+                role="tabpanel"
+                id="chi-panel-sotterranea"
+                aria-labelledby="chi-tab-sotterranea"
+                data-chi-panel="sotterranea"
+              >
+                <p><b>comunicazione sotterranea</b><br><b>♀</b></p>
+                <img src="Immagini/foresta/5E1E21F5-C0FB-494B-B4C8-3399176F1B05.png" alt="chioma">
+                <p>Per fare le foglie ci vuole un ramo e la fotosintesi</p>
+
+                <img src="Immagini/foresta/0CD542B5-ABF2-4141-AF6F-2F32F024364B.png" alt="humus">
+                <p>Per fare l’humus le foglie cadono</p>
+              </div>
+
+              <div
+                class="chi-panel"
+                role="tabpanel"
+                id="chi-panel-aerea"
+                aria-labelledby="chi-tab-aerea"
+                data-chi-panel="aerea"
+                hidden
+              >
+                <p><b>comunicazione aerea</b><br><b>♂</b></p>
+                <img src="Immagini/foresta/fiore_sfondo_bianco_puro.png" alt="fiori su ramo">
+                <p>Per fare i fiori ci vuole un ramo</p>
+
+                <img src="Immagini/foresta/C6169F3B-6D57-4D71-B6FC-01AFA0982576.png" alt="impollinazione">
+                <p>impollinazione - vento, insetti - fecondazione aerea</p>
+
+                <img src="Immagini/foresta/93027D62-352B-4A1C-BC75-8D94EF18C6CB.png" alt="frutto">
+                <p>Per fare il frutto ci vuole l’impollinazione</p>
+
+                <img src="Immagini/foresta/Gemini_Generated_Image_9y4n2r9y4n2r9y4n.png" alt="seme">
+                <p>Per fare il seme ci vuole un frutto</p>
+              </div>
+            </div>
+
+            <p><b>congiunzione sessuale</b></p>
+            <img src="Immagini/foresta/8344B474-5828-44BD-8B70-44B7C87FAB54.png" alt="congiunzione sessuale">
+            <p>Fecondazione sotterranea</p>
+
+            <img src="Immagini/foresta/8E30AFAA-B032-4004-B29F-EACB17DBF2BE.png" alt="radici">
+            <p>Per fare le radici ci vuole un seme fecondato</p>
+
+            <img src="Immagini/foresta/822DADC9-6601-47FE-A84E-8F09607B722E.png" alt="albero finale">
+            <p>Per fare un albero ci vogliono le radici e lo spazio aereo</p>
+          </div>
+
+          <!-- ===================== CHI TRIBÙ ===================== -->
+          <div class="chi-card chi-tribu">
+            <b>Chi? della Tribù</b>
+            <p>proprietà emergente: <b>IL CORPO</b></p>
+
+            <img src="Immagini/tribu/D1CBE91C-AB64-46CA-AE19-B3832F0A8EDB.png" alt="tribù habitat">
+            <p>
+              La tribù è il luogo dove gli individui svolgono le loro relazioni gruppali protomentali connesse
+              agli assunti di base. L’accoppiamento strutturale tra la storia della tribù e l’habitat genera anche:
+              palizzate, latrine/discariche, orti, cimiteri, regole tribali e caratteri individuali.
+            </p>
+
+            <img src="Immagini/tribu/625DD442-DF4C-4AA6-A041-5D5C0A200E3F.png" alt="gruppo tribù">
+            <p>
+              La tribù è composta da gruppi di lavoro e gruppi in assunti di base. Il corpo della tribù è formato
+              da individui in relazione: uomini, donne, bambini, anziani, padroni, schiavi.
+            </p>
+
+            <img src="Immagini/tribu/masai_sfondo_bianco.png" alt="individuo adulto">
+            <p><small>individuo adulto</small></p>
+
+            <img src="Immagini/tribu/Gemini_Generated_Image_p08e0wp08e0wp08e.png" alt="corpo e funzioni">
+            <p>
+              Ogni corpo si suddivide in funzioni (locomozione, circolazione sanguigna, pensiero, riproduzione)
+              sotto la regia di apparati e organi composti da tessuti, cellule, organuli che creano proteine,
+              metabolismo biochimico ed enzimatico.
+            </p>
+
+            <img src="Immagini/tribu/D1CBE91C-AB64-46CA-AE19-B3832F0A8EDB.png"" alt="villaggio tribù">
+            <p>
+              Il corpo della tribù è simbolicamente contenuto dalla palizzata che gli adulti costruiscono per
+              protezione del territorio e per la gestione dei confini tra dentro e fuori.
+            </p>
+
+            <div class="chi-box-pink">
+              <p><b>Gestione corporea di sesso e violenza</b></p>
+
+              <!-- SDOPPIO (TAB) - Tribù -->
+              <div class="chi-tabs" data-chi-tabs>
+                <div class="chi-tabbar" role="tablist" aria-label="Seleziona tema tribù">
+                  <button
+                    class="chi-tab is-active"
+                    type="button"
+                    role="tab"
+                    aria-selected="true"
+                    aria-controls="chi-panel-tribu-sesso"
+                    id="chi-tab-tribu-sesso"
+                    data-chi-tab="tribu-sesso"
+                  >
+                    sesso <br><b>⚥</b>
+                  </button>
+
+                  <button
+                    class="chi-tab"
+                    type="button"
+                    role="tab"
+                    aria-selected="false"
+                    aria-controls="chi-panel-tribu-guerra"
+                    id="chi-tab-tribu-guerra"
+                    data-chi-tab="tribu-guerra"
+                  >
+                    guerra e caccia ♂
+                  </button>
+                </div>
+
+                <div
+                  class="chi-panel is-active"
+                  role="tabpanel"
+                  id="chi-panel-tribu-sesso"
+                  aria-labelledby="chi-tab-tribu-sesso"
+                  data-chi-panel="tribu-sesso"
+                >
+                  <img src="Immagini/tribu/unnamed.jpg" alt="sesso">
+                  <p>Il sesso diventa l’assunto di base per procreare la specie.</p>
+                  <b>⚥</b>
+                </div>
+
+                <div
+                  class="chi-panel"
+                  role="tabpanel"
+                  id="chi-panel-tribu-guerra"
+                  aria-labelledby="chi-tab-tribu-guerra"
+                  data-chi-panel="tribu-guerra"
+                  hidden
+                >
+                  <img src="Immagini/tribu/unnamed-2.jpg" alt="guerra e caccia">
+                  <p>
+                    La guerra e la caccia diventano gli assunti di base per fame, protezione del territorio, difesa,
+                    e per inserire la donna nel suo territorio di caccia.
+                  </p>
+                  <b>♂</b>
+                </div>
+              </div>
+
+              <img src="Immagini/tribu/unnamed-1.jpg" alt="bambino">
+              <p>
+                ♀
+              </p>
+
+              <img src="Immagini/tribu/CE5B734B-9759-462C-BD3F-47A6AA754C60.png" alt="bambino">
+              <p>
+                Il bambino attraverso la crescita biologica e mentale e i riti di iniziazione si trasforma in adulto.
+              </p>
+
+              <img src="Immagini/tribu/masai_sfondo_bianco.png" alt="adulti tribù">
+              <p>
+                Adulto: il corpo individuale della tribù insieme ai corpi adulti e le loro funzioni relazionali
+                (sopravvivenza, riproduzione) rappresentano il corpo collettivo della tribù.
+              </p>
+            </div>
+          </div>
+
+          <!-- ===================== CHI MISTERO ===================== -->
+          <div class="chi-card chi-mistero">
+            <b>Chi? del Mistero</b>
+            <p>proprietà emergente: <b>LA MORTE</b></p>
+
+            <img src="Immagini/mistero/img-magritte-articolo-1.jpg" alt="magritte">
+            <p>
+              Gli universi infiniti del fuori e del dentro si incrociano: tutto il dentro è contenuto in tutto il fuori,
+              tutto il fuori è contenuto in tutto il dentro.
+            </p>
+
+            <img src="Immagini/mistero/unnamed-1.jpg" alt="zen">
+            <p>
+              La scuola di Zen (intorno al 1000 d.C.) interroga su Buddha: non è mai nato, non è mai morto.
+              Lo ha solo sognato. La sua morte non è reale: è solo la fine del suo lungo sogno. Il centro qui
+              è la regia dell’unità: ciò che conta è ciò che si vede e ciò che non si vede. Chi contiene il sogno
+              è il corpo e il suo cervello. Chi contiene il corpo è il sogno.
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+    
   
   </main>
 
