--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
   <ul id="mega-top" class="top-level">
     <!-- BLU -->
     <li class="has-submenu gm gm--blue">
-      <button class="top-link" aria-expanded="false" aria-controls="submenu-1">Guelfo Margherita</button>
+      <button class="top-link" aria-expanded="false" aria-controls="submenu-1">Introduzione | Guelfo Margherita</button>
       <div id="submenu-1" class="submenu">
         <ul>      
           <li><a href="index.html#Bio">Biografia</a></li>
@@ -15,7 +15,7 @@
 
     <!-- VERDE -->
     <li class="has-submenu gm gm--green">
-      <button class="top-link" aria-expanded="false" aria-controls="submenu-2">Guelfo Margherita</button>
+      <button class="top-link" aria-expanded="false" aria-controls="submenu-2">Opere | Guelfo Margherita</button>
       <div id="submenu-2" class="submenu">
         <ul>
           <li><a href="libri.html">Libri</a></li>
@@ -28,7 +28,7 @@
 
     <!-- ROSSO -->
     <li class="has-submenu gm gm--red">
-      <button class="top-link" aria-expanded="false" aria-controls="submenu-3">Guelfo Margherita</button>
+      <button class="top-link" aria-expanded="false" aria-controls="submenu-3">Video e didattica |Guelfo Margherita</button>
       <div id="submenu-3" class="submenu">
         <ul>
           <li><a href="video.html">Video</a></li>
@@ -43,7 +43,7 @@
 
     <!-- GIALLO -->
     <li class="has-submenu gm gm--yellow">
-      <button class="top-link" aria-expanded="false" aria-controls="submenu-3">Guelfo Margherita</button>
+      <button class="top-link" aria-expanded="false" aria-controls="submenu-4">Agenda e Novità | Guelfo Margherita</button>
       <div id="submenu-3" class="submenu">
         <ul>
           <li><a href="tempopresente.html">Tempo Presente: ultimissime dalla rete</a></li> 
