--- a/index.html
+++ b/index.html
@@ -865,13 +865,30 @@
             <b>Chi? del Mistero</b>
             <p>proprietà emergente: <b>LA MORTE</b></p>
 
+            <img src="Immagini/mistero/shutterstock_498490282.630x360.jpg" alt="yenejang">
+            <p>
+              IL TAO significa la via. <br>
+              la via lineare, quella che puù essere percorsa, non è la via <br>
+              (solo se percorri l'inieme delle sfiocature dei suoi bivi infiniti nello spazio-tempo che essa crea.) <br>
+              Il nome che le dai non puù essere detto dal nulla al nulla. <br>
+              Non-essere è Essere. <br>
+              Nel Non-essere emergono singolarità come il cielo e la terra  e l'Essere è la madre delle infinite creazioni. <br>
+              Perciò la via non ha sogni ma contempla l'arcano che sempre sogna realtà non entrando nel reale. <br>
+              I sogni e il reale vengono dalla stessa materia energia
+              anche se si sviluppano in bolle culturali  con costanti cosmologiche diverse. <br>
+              Insieme sono il mistero <br>
+              porta infinita per la congiunzione di tutti gli arcani nella fusione continua, lungo la via, <br>
+              dell Essere e del Non-essere.
+            </p>
             <img src="Immagini/mistero/img-magritte-articolo-1.jpg" alt="magritte">
             <p>
               Gli universi infiniti del fuori e del dentro si incrociano: tutto il dentro è contenuto in tutto il fuori,
-              tutto il fuori è contenuto in tutto il dentro.
+              tutto il fuori è contenuto in tutto il dentro, come ci illustra Magritte nel dipinto &quot;Dècalcomanie&quot; del 1966<br>
+              
+
             </p>
 
-            <img src="Immagini/mistero/unnamed-1.jpg" alt="zen">
+             <img src="Immagini/mistero/unnamed-1.jpg" alt="zen">
             <p>
               La scuola di Zen (intorno al 1000 d.C.) interroga su Buddha: non è mai nato, non è mai morto.
               Lo ha solo sognato. La sua morte non è reale: è solo la fine del suo lungo sogno. Il centro qui
