--- a/tempoperiodico.html
+++ b/tempoperiodico.html
@@ -64,7 +64,51 @@
   </header>
 
   <main class="locandine-section">
-    <h2>Prossimi appuntamenti (locandine e materiali)</h2>
+    <h2>Appuntamenti Periodici ( ed eventuale materiale )</h2>
+
+    <section>
+      <h3>T.I.R.A.M.I.S.U.</h3>
+
+      <h4>Gruppo di lettura</h4>
+      <p>avrà luogo i lunedì seguenti alle ore 21:00. gli interessati contattino il dott. <a href="fabrizio.delloioio@gmail.com ">Fabrizio Dello Ioio</a></p>
+      <ul>
+        <li>15/12/26</li>
+        <li>12/01/26</li>
+        <li>09/02/25</li>
+        <li>09/03/26</li>
+        <li>13/04/26</li>
+        <li>11/05/26</li>
+        <li>08/06/26</li>
+      </ul>
+
+      <h4>Supervisione di gruppo istituzionale</h4>
+       <p>avrà luogo i martedì seguenti alle ore 21:00. gli interessati contattino la dott. <a href="raffpass03@gmail.com">Raffaellla Passeggia</a></p>
+      <ul>
+        <li>21/10/25</li>
+        <li>18/11/25</li>
+        <li>16/12/25</li>
+        <li>20/01/26</li>
+        <li>17/02/26</li>
+        <li>17/03/26</li>
+        <li>21/04/26</li>
+        <li>19/05/26</li>
+        <li>16/06/26</li>
+        <li>21/07/26</li>
+      </ul>
+    </section>
+
+    <!-- IIPG -->
+    <section>
+      <h3>Lezioni IIPG</h3>
+        <p>l'attività didattica del professor margherita avrà nelle seguenti date alle ore 20.30 contattare la <a href="">Segreteria didattica dell IIPG, scuola di Roma</a></p>
+      <ul>
+        <li>Lezione 1 — 02/02/26</li>
+        <li>Lezione 2 — 02/03/26</li>
+        <li>Lezione 3 — 04/05/26</li>
+        <li>Lezione 4 — 15/06/26</li>
+        <li>Lezione 5 — 07/09/26</li>
+      </ul>
+    </section>
 
     <div class="locandine-grid">
       
