--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
 
     <!-- VERDE -->
     <li class="has-submenu gm gm--green">
-      <button class="top-link" aria-expanded="false" aria-controls="submenu-2">Opere | Guelfo Margherita</button>
+      <button class="top-link" aria-expanded="false" aria-controls="submenu-2">Scritti | Guelfo Margherita</button>
       <div id="submenu-2" class="submenu">
         <ul>
           <li><a href="libri.html">Libri</a></li>
@@ -48,6 +48,7 @@
         <ul>
           <li><a href="tempopresente.html">Tempo Presente: ultimissime dalla rete</a></li> 
           <li><a href="tempofuturo.html">Tempo futuro: prossimi appuntamenti ( locandine e materiali )</a></li>
+          <li><a href="tempoperiodico.html">Attività Periodiche</a></li>
         </ul>
       </div>
     </li>
