--- a/index.html
+++ b/index.html
@@ -762,13 +762,13 @@
                   <div class="chi-split chi-split--tribu">
                     <div class="chi-pane">
                       <p class="chi-pane-title"><b>sesso</b> <b>⚥</b></p>
-                      <img src="Immagini/tribu/unnamed.jpg" alt="sesso">
+                      <img src="Immagini/tribu/unnamed.png" alt="sesso">
                       <p>Il sesso diventa l’assunto di base per procreare la specie.</p>
                     </div>
 
                     <div class="chi-pane">
                       <p class="chi-pane-title"><b>guerra e caccia</b> <b>♂</b></p>
-                      <img src="Immagini/tribu/unnamed-2.jpg" alt="guerra e caccia">
+                      <img src="Immagini/tribu/unnamed-2.png" alt="guerra e caccia">
                       <p>
                         La guerra e la caccia diventano gli assunti di base per fame, protezione del territorio, difesa,
                         e per inserire la donna nel suo territorio di caccia.
@@ -776,7 +776,7 @@
                     </div>
                   </div>
 
-                   <img src="Immagini/tribu/unnamed-1.jpg" alt="bambino">
+                   <img src="Immagini/tribu/unnamed-1.png" alt="bambino">
                   <p>♀</p>
 
                 
