--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
 
     <!-- VERDE -->
     <li class="has-submenu gm gm--green">
-      <button class="top-link" aria-expanded="false" aria-controls="submenu-2">Scritti | Guelfo Margherita</button>
+      <button class="top-link" aria-expanded="false" aria-controls="submenu-2">Scritti e altro | Guelfo Margherita</button>
       <div id="submenu-2" class="submenu">
         <ul>
           <li><a href="libri.html">Libri</a></li>
