--- a/index.html
+++ b/index.html
@@ -909,9 +909,11 @@
                   <img src="Immagini/mistero/pinu.png" alt="img">
                   <img src="Immagini/mistero/Opera_senza_titolo 10.png" alt="img">
 
-
+                  <p id="poesia">
+                    Potenza creativa della follia.
+                </p>
                   <p id="poesia">Nell infinito il Non-essere è l'Essere <br>
-                  La Morte e centomila Orgasmi
+                  La Morte è centomila Orgasmi
                 </p>
                  
 
