--- a/navbar.html
+++ b/navbar.html
@@ -6,8 +6,8 @@
       <button class="top-link" aria-expanded="false" aria-controls="submenu-1">Introduzione | Guelfo Margherita</button>
       <div id="submenu-1" class="submenu">
         <ul>      
-          <li><a href="index.html#Bio">Biografia</a></li>
-          <li><a href="index.html#aspasso">A "spasso" nel cervello di guelfo</a></li>
+          <li><a href="index.html#Bio">Una Biografia come una cartella clinica</a></li>
+          <li><a href="index.html#aspasso">A "spasso" nel cervello di Guelfo</a></li>
           <li><a href="index.html#chi">Il gioco dei Chi?</a></li>
         </ul>
       </div>
