--- a/index.html
+++ b/index.html
@@ -937,14 +937,14 @@
        <div>
           
           <p>
-            Il gioco si sviluppa non solo seguendo le colonne sulla verticale, ma anche in orizzontale. La Vita della Foresta produce frutti che il Corpo della Tribù inghiotte e trasforma in Pensiero (gruppo di lavoro) o sogno (gruppo in assunto di base) sui beni interdetti (Paradiso Perduto) della Foresta dell Eden. <br> 
+            Il gioco si sviluppa non solo seguendo le colonne sulla verticale, ma anche in orizzontale. La Vita della Foresta produce frutti che il Corpo della Tribù inghiotte e trasforma in Pensiero (gruppo di lavoro) o Sogno (gruppo in assunto di base) sui beni interdetti (Paradiso Perduto) della Foresta dell Eden. <br> 
             Il gioco può essere attivato da qualunque "Chi" individuale o collettivo, rappresentato da una casella nella matriosca seriale del tabellone. 
-            Questo "Chi", per la sua nascita crescita e sopravivenza, sceglie un contenitore rappresenato per esempio da un altra casella. L'interazione può essere di inglobamento o di espulsione; direbbe Bion: con Odio (H), Amore (L), Conoscenza (K). Il frutto dell loro incontro/scontro (violeza, sesso) sarà rappresentato da una terza casella presente sull tabellone. <br>
+            Questo "Chi", per la sua nascita crescita e sopravivenza, sceglie un contenitore rappresenato per esempio da un altra casella. L'interazione può essere di inglobamento o di espulsione; direbbe Bion: con Odio (H), Amore (L), Conoscenza (K). Il frutto dell loro incontro/scontro (violeza, sesso) sarà rappresentato da una terza casella presente sul tabellone. <br>
             Lo sviluppo del gioco potrà essere nelle pratiche e nelle fantasie che congiungono i multilivelli delle tre caselle in relazione e nei campi individuanti che esse inducono. <br>
             Naturalmente i campi e le previsioni (come quelle metereologiche) variano da momento a momento tra l'istantaneo e il cosmico. <br> <br>
             È ovvio che questo tabellone espone non una teoria scientifica ma un sogno, giocato (jouer, play) cioè rappresentato, sul crinale della follia e del delirio. <br>
             Spostare il punto di vista dal fuori dei confini sensoriali al dentro sognato, dove "tutti i gatti sono bigi", può aiutare a "comprenderli" (capirli e curarli) in noi e negli altri. <br>
-            Perchè non utilizzare il sogno e la follia se possono facilitare l'intuizione, madre di qualunque scoperta. ce lo suggerisce Kekulè con un anello benzenico fagocitato da un uroboro. <br>
+            Perchè non utilizzare il sogno e la follia se possono facilitare l'intuizione, madre di qualunque scoperta. Ce lo suggerisce Kekulè con un anello benzenico fagocitato da un uroboro. <br>
             Il tabellone e il gioco sono interattivi: sarà gradito ed eventualmente utilizzato per espanderlo qualunque suggerimento e interazione creativa. <br>
           </p>
         </div>
