--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       
       <p>
         <h2 class="bio-h2">Una Biografia come una cartella clinica</h2>
-        <p>Dove e perchè si originano il contro-transfert e l'insieme di ribellioni in comune di cui prendersi cura insieme nella propria verità e libertà.</p>
+        <p>Dove e perché si originano le qualità del contro-transfert e l'insieme di ribellioni in comune di cui prendersi cura, tra noi insieme, ma ognuno nella propria verità e libertà.</p>
         <b>Anamnesi familiare e personale remota</b><br>
         Guelfo Margherita è nato a Roma l'11/08/1937 come figlio di mezzo di una famiglia napoletana (tra Serenella, poi astrologa e Lucio poi geofisico che cerca nel mondo petrolio per la Total e scrittore). La famiglia, per il lavoro di suo padre Luigi Mario (commercialista amante della letteratura classica e dell’opera lirica), chiamato da Enrico Mattei a dirigere per l’Italia meridionale l’Agip poi Eni, nel campo della vendita dell’energia, si ri-trasferisce a Napoli nell’immediato dopoguerra. Sua madre Ave Ragazzi è l’ultima figlia di Vincenzo, medico della Regia Marina Italiana, botanico, naturalista, epidemiologo e geografo (esploratore di contesti nuovi), ai tempi delle pirocorvette, che con lui a bordo attraversavano l’Atlantico e il Pacifico; svolgeva lo stesso lavoro di Charles Darwin e poi finì alla corte di Menelik e sull’Enciclopedia Treccani, come medico delle bande di guerra del Negus, per i progetti di igiene sociali per la capitale Entoto (poi Addis Abeba) e la direzione dell’ avamposto geografico di Let Marefià, via di penetrazione dell’Italia nello Scioà abissino. Diresse l’Ospedale della Regia Marina di Massaua, poi quello di Napoli. Benché non si incontrassero mai, il nonno morì prima che il nipote venisse alla luce, fu il suo Spirito Guida nel desiderio di percorrenza ed esplorazione di strade nuove.  
 
@@ -291,7 +291,12 @@
         <h3>La supervisione di gruppo</h3>
         <img src="Immagini/IMG_1157.jpg" alt="Occhio della mosca">
         <div class="idee-content">
-          <p>pagina in allestimento</p>
+          <p>
+            Nella supervisione di gruppo può sia essere coinvolto un singolo che cura un gruppo, sia un gruppo o un'istituzione che sta curando un singolo. <br>
+            Per Guelfo essa comunque si svolge in un contesto in cui si fondono un gruppo di lavoro (che elabora apprendendo dall'esperienza tecniche professionali) e un gruppo in assunti di base (che si scambia le emozioni connesse con la sua crescita). Le due risultano sempre connesse col campo che il gruppo ricrea nel setting della sua supervisione. Per Guelfo non è mai un docente che col suo sapere (in)forma allievi, ma l'intero gruppo che si supervisiona facendo esperienza del materiale libero associativo che incontra mescolando tutti i casi clinici presenti nelle esperienze dei suoi componenti. <br>
+            La supervisione di gruppo è come un pubblico che realizza, osservando, mentre si supervisiona, i suoi movimenti come a una danza, che sta generando una coreografia tra le sue parti. Il gruppo diviene un organismo capace di esprimere contemporaneamente a se stesso (come recettore) un pensiero della sua pluralità (come effettore). Un insieme capace di danzare mentre guarda e si gode la sua coreografia. Insieme artista e spettatore capace di esprimere a se stesso la unitarietà delle sue molteplici singolarità. <br>
+            L'insieme partorisce, come singolarità emergenti, da una parte un supervisore collettivo, dall'altra un paziente collettivo compattati dall'unione dell'esperienze dei suoi molteplici partecipanti.
+          </p>
         </div>
       </div>
 
